# rpm-python-pack

./: .gitignore  README.md  cli.py  pyproject.toml  python-pack-script.spec  setup.py
.github/workflows/: create-release.yml
python_pack_script/: __init__.py  __main__.py  url.py
tests/: test_python_pack_script.py
