[tool.poetry]
name = "python-pack-script"
version = "0.0.4"
description = "Demo RPM builder for python packages"
authors = ["mbrav <mbrav@protonmail.com>"]

[tool.poetry.dependencies]
python = ">3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
python-pack-script = "python_pack_script:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
