[tool.poetry]
name = "python_pack_script"
version = "0.0.6"
description = "Demo RPM builder for python packages"
authors = ["mbrav <mbrav@protonmail.com>",]
maintainers = [ "mbrav <mbrav@protonmail.com>",]
homepage = "https://github.com/mbrav"
repository = "https://github.com/mbrav/rpm-python-pack"
documentation = "https://github.com/mbrav/rpm-python-pack/blob/main/README.md"
classifiers = [ "Topic :: Software Development :: Build Tools",]
keywords = [ "python", "build", "centos", "rpm", "poetry", "rockylinux",]
readme = "README.md"
license = "GNU General Public License"


[tool.poetry.dependencies]
python = ">3.7"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
python-pack-script = "python_pack_script:main"
python_pack_script = "python_pack_script:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
